--- a/Backend/src/views/crud.ejs
+++ b/Backend/src/views/crud.ejs
@@ -16,7 +16,7 @@
 <body>
     <div class ='container'>
         <div class = 'row'>
-            <form action = '/POST_CRUD' method = 'post'>
+            <form action = '/POST-CRUD' method = 'post'>
                 <div class = 'col-12'>
                     <div>Create user account </div>
                 </div>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="form-group">
                   <label for="inputName">Full name</label>
-                  <input type="text" class="form-control" placeholder="John Caiter" name = 'inputname'>
+                  <input type="text" class="form-control" placeholder="John Caiter" name = 'fullname'>
                 </div>
                 <div class="form-group">
                   <label for="inputAddress">Address</label>
