--- a/Backend/src/views/editCRUD.ejs
+++ b/Backend/src/views/editCRUD.ejs
@@ -16,16 +16,17 @@
 <body>
     <div class ='container'>
         <div class = 'row'>
-            <form action = '/PUT-CRUD' method = 'put'>
+            <form action = '/PUT-CRUD' method = 'post'>
                 <div class = 'col-12'>
                     <div text-allign: center> Edit user account: </div>
+                <input name = 'id' value =<%=user.id%>' hidden />
                 <div class="form-group">
                   <label for="inputName">Full name</label>
-                  <input type="text" class="form-control" placeholder="John Caiter" name = 'fullname' value=<%= user.fullname %>>
+                  <input type="text" class="form-control" placeholder="John Caiter" name = 'fullname' value=<%=user.fullname%>>
                 </div>
                 <div class="form-group">
                   <label for="inputAddress">Address</label>
-                  <input type="text" class="form-control" placeholder="Location" name = 'address'>
+                  <input type="text" class="form-control" placeholder="Location" name = 'address' value=<%=user.address%>>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -37,7 +38,7 @@
                     </div>
                   <div class="form-group col-md-6">
                     <label for="inputPhoneNumber">Phone number</label>
-                    <input type="text" class="form-control" name = 'phonenumber'>
+                    <input type="text" class="form-control" name = 'phonenumber' value=<%=user.phoneNumber%>>
                   </div>
                 </div>
                 <div class="form-row">
@@ -51,7 +52,7 @@
                     </div>
                   <div class="form-group col-md-6">
                     <label for="inputpositionID">Postion ID</label>
-                    <input type="text" class="form-control" name = 'positionID'>
+                    <input type="text" class="form-control" name = 'positionID' value=<%=user.positionID%>>
                   </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Update</button>
