--- a/Frontend/src/containers/Auth/Login.scss
+++ b/Frontend/src/containers/Auth/Login.scss
@@ -3,25 +3,29 @@
     height: 100vh;
 
     .login-container{
-        width: 400px;
-        height: 100%;
-        margin: 0 auto;
+        width: 300px;
+        margin: auto;
         background-color: white;
         border-radius: 25px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: 463px;
 
         .login-content{
             padding: 15px;
             
             .text-login{
                 font-weight: 600;
-                font-size: 24px;
-                padding: 30px;
+                font-size: 35px;
+                padding: 19px;
                 text-align: center;
             }
 
             .login-input{
-                margin: 10px 0;
-                margin-top: 20px;
+                margin: 15px 0;
             }
 
             .btn-login{
