--- a/Frontend/src/containers/System/UserManage.scss
+++ b/Frontend/src/containers/System/UserManage.scss
@@ -42,3 +42,48 @@
         background-color: transparent !important;
     }
 }
+
+.modalUser {
+  .modal-body {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+
+    .input-container{
+      display: flex;
+      flex-direction: column;
+      width:47%;
+
+        &.max-width-input{
+          width: 97%
+        }
+
+      input{
+         height: 30px;
+         outline: none;
+         border: 1px solid grey;
+         border-radius: 12px;
+         padding: 0 10px;
+     }
+
+      .form-control{
+        border-radius: 12px;
+        border: 1px solid grey;
+        height: 30px;
+      }
+      }
+  }
+  .modal-footer {
+    .btn-create{
+      font-size: 16px;
+      color: white;
+      border: none;
+    }
+  }
+
+    .btn{
+      font-size: 16px;
+      color: white;
+      border: none;
+    }
+}
