--- a/Frontend/src/containers/System/UserManage.scss
+++ b/Frontend/src/containers/System/UserManage.scss
@@ -17,7 +17,7 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04AA6D;
+  background-color: #0071ba;
   color: white;
 }
 
@@ -76,7 +76,6 @@
   .modal-footer {
     .btn-create{
       font-size: 16px;
-      color: white;
       border: none;
     }
   }
