Layout for homepage

--- a/Frontend/src/containers/Homepage/Header.scss
+++ b/Frontend/src/containers/Homepage/Header.scss
@@ -47,7 +47,7 @@
             justify-content: center;
             align-items: center;
             i {
-                color: blue;
+                color: rgb(23, 157, 229);
             }
         }
     }
@@ -108,11 +108,38 @@
         }
     }
 
-    .banner-container-down{
+    .banner-content-down{
         height: 50%;
-        
-        .banner-options{
-
+        margin-top: 50px;
+        align-items: center;
+        .banner-option{
+            display: flex;
+            justify-content: center;
+            .child-option{
+                width: 10%;
+                text-align: center;
+                margin: 90px 17px;
+                i {
+                    //font-weight: 100;
+                    align-items: center;
+                    width: fit-content;
+                    padding: 10px;
+                    border-radius: 50%;
+                    background: white;
+                    font-size: 30px;
+                    width: 60px;
+                    height: 60px;
+                    color:  rgb(23, 157, 229);
+                }
+                .text{
+                    font-size: 17px;
+                    font-weight: 600;
+                    cursor: pointer; 
+                    &:hover{
+                        color:  rgb(23, 157, 229);
+                    }
+                }
+            }
         }
     }
 }
