--- a/Frontend/src/containers/Homepage/Header.scss
+++ b/Frontend/src/containers/Homepage/Header.scss
@@ -55,12 +55,13 @@
                     cursor: pointer;
                 }
             }
-            .language-vn{ 
+            .language-vi{ 
                 cursor: pointer;
                 margin: 0 12px;
                 font-size: 18px;
                 &.active{
                     color: orange;
+                    font-weight: 600;
                 }
             }
             .language-en{
@@ -68,6 +69,7 @@
                 font-size: 18px;
                 &.active{
                     color: blue;
+                    font-weight: 600;
                 }
             }
         }
