--- a/Frontend/src/containers/Homepage/Homepage.scss
+++ b/Frontend/src/containers/Homepage/Homepage.scss
@@ -1,9 +1,11 @@
-.section-specialty{
+.section-container{
     margin-top:30px;
     height: 330px;
-    background: #f5f5f5;
+    &.specialty {
+        background: #f5f5f5;
+    }
 
-    .specialty-container{
+    .section-content{
         margin: 0 100px;
         display: flex;
         flex-direction: column;
@@ -36,7 +38,7 @@
         .body{
             .slider-content{
                 .image-content{
-                    background: url(../../../assets/images/specialty/112457-co-xuong-khop.webp);
+                    background: url(../../assets/images/specialty/112457-co-xuong-khop.webp);
                     width: 278px;
                     height: 150px;
                     background-position: center center;
