--- a/Frontend/src/containers/Homepage/Header.scss
+++ b/Frontend/src/containers/Homepage/Header.scss
@@ -3,7 +3,11 @@
     color: black;
     width: 100%;
     padding: 0 30px;
-    
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 10000;
+
     .header-content{
         width: 100%;
         height: 100%;
