--- a/Frontend/src/containers/Homepage/Homepage.scss
+++ b/Frontend/src/containers/Homepage/Homepage.scss
@@ -5,7 +5,7 @@
         height: 290px;
     }
     &.medical{
-        margin-top:10px;
+        margin-top:20px;
         height: 280px;
     }
     &.doctor{
@@ -259,6 +259,7 @@
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: cover;
+                        border-radius: 0%;
                     }
                     &.handbook_2{
                         margin-left: 70px;
@@ -269,6 +270,7 @@
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: cover;
+                        border-radius: 0%;
                     }
                     &.handbook_3{
                         margin-left: 70px;
@@ -279,6 +281,7 @@
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: cover;
+                        border-radius: 0%;
                     }
                     &.handbook_4{
                         margin-left: 70px;
@@ -289,6 +292,7 @@
                         background-position: center center;
                         background-repeat: no-repeat;
                         background-size: cover;
+                        border-radius: 0%;
                     }
                 }
             
