--- a/Frontend/src/containers/Header/Header.scss
+++ b/Frontend/src/containers/Header/Header.scss
@@ -4,7 +4,7 @@
     z-index: 99;
     display: flex;
     justify-content: space-between;
-    //background-color: $colormain;
+    background-color: $colormain;
     color: $common-text-color;
     height: 40px;
     position: relative;
