--- a/Frontend/src/containers/System/Admin/UserRedux.scss
+++ b/Frontend/src/containers/System/Admin/UserRedux.scss
@@ -1,9 +1,36 @@
 .redux-container{    
     .redux-body{
+        font-size: 18px;
         .text-center{
-            font-size: 20px;
+            font-size: 25px;
             padding: 5px 0;
             font-weight: 500;            
         }
     }
+}
+.image-container{
+    display: flex;
+    flex-direction: column;
+    .upload-button{
+        flex-direction:row;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 5px;
+        background-color: #ddd;
+        cursor: pointer;
+        width: 100px;
+        font-size: 18px;
+        &:hover{
+            opacity: 0.9;
+        }
+    }
+}
+.preview-image{
+    height: 80px;
+    width: 100%;
+    background: center center no-repeat;
+    background-size: contain;
+}
+.btn-primary{
+    font-size: 20px;
 }
