--- a/Frontend/src/containers/System/Admin/UserRedux.scss
+++ b/Frontend/src/containers/System/Admin/UserRedux.scss
@@ -2,9 +2,17 @@
     .redux-body{
         font-size: 18px;
         .text-center{
+            display: flex;
             font-size: 25px;
-            padding: 5px 0;
-            font-weight: 500;            
+            padding: 0 160px;
+            font-weight: 500;   
+            justify-content: space-between;
+            span{
+                padding-left: 120px;
+            }
+            .btn-primary{
+                font-size: 20px;
+            }
         }
     }
 }
@@ -18,19 +26,10 @@
         border-radius: 5px;
         background-color: #ddd;
         cursor: pointer;
-        width: 100px;
+        width: 150px;
         font-size: 18px;
         &:hover{
             opacity: 0.9;
         }
     }
-}
-.preview-image{
-    height: 80px;
-    width: 100%;
-    background: center center no-repeat;
-    background-size: contain;
-}
-.btn-primary{
-    font-size: 20px;
 }
