Delete and Edit User Redux

--- a/Frontend/src/containers/System/Admin/UserRedux.scss
+++ b/Frontend/src/containers/System/Admin/UserRedux.scss
@@ -13,6 +13,9 @@
             .btn-primary{
                 font-size: 20px;
             }
+            .btn-warning{
+                font-size: 20px;
+            }
         }
     }
 }
