Update preview image with lightbox

--- a/Frontend/src/containers/Homepage/Homepage.scss
+++ b/Frontend/src/containers/Homepage/Homepage.scss
@@ -170,79 +170,9 @@
                         background-repeat: no-repeat;
                         background-size: cover;
                     }
-                    &.doctor_1{
+                    &.doctor{
                         margin-top: 10px;
-                        background: url(../../assets/images/doctor/091359-bac-sy-kim-chi-cao-thang.jpg);
-                        background-position: center center;
-                        height: 200px;
-                        width: 200px;
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        border-radius: 50%;
-                    }
-                    &.doctor_2{
-                        margin-top: 10px;
-                        background: url(../../assets/images/doctor/103447-bs-hong-anh.jpg);
-                        background-position: center center;
-                        height: 200px;
-                        width: 200px;
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        border-radius: 50%;
-                    }
-                    &.doctor_3{
-                        margin-top: 10px;
-                        background: url(../../assets/images/doctor/103851-bs-nguyen-thanh-tuan.jpg);
-                        background-position: center center;
-                        height: 200px;
-                        width: 200px;
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        border-radius: 50%;
-                    }
-                    &.doctor_4{
-                        margin-top: 10px;
-                        background: url(../../assets/images/doctor/142313-bs-tran-huu-binh.jpg);
-                        background-position: center center;
-                        height: 200px;
-                        width: 200px;
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        border-radius: 50%;
-                    }
-                    &.doctor_5{
-                        margin-top: 10px;
-                        background: url(../../assets/images/doctor/144258pho-giao-su-nguyen-thanh-binh-c.jpg);
-                        background-position: center center;
-                        height: 200px;
-                        width: 200px;
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        border-radius: 50%;
-                    }
-                    &.doctor_6{
-                        margin-top: 10px;
-                        background: url(../../assets/images/doctor/162528-bs-nguyen-thi-thanh-thuy.jpg);
-                        background-position: center center;
-                        height: 200px;
-                        width: 200px;
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        border-radius: 50%;
-                    }
-                    &.doctor_7{
-                        margin-top: 10px;
-                        background: url(../../assets/images/doctor/165611-4-bscki-nguyen-thi-thuy-nga.jpg);
-                        background-position: center center;
-                        height: 200px;
-                        width: 200px;
-                        background-repeat: no-repeat;
-                        background-size: cover;
-                        border-radius: 50%;
-                    }
-                    &.doctor_8{
-                        margin-top: 10px;
-                        background: url(../../assets/images/doctor/174603-ts-bs-pham-chi-lang.jpg);
+                        //background: url(../../assets/images/doctor/091359-bac-sy-kim-chi-cao-thang.jpg);
                         background-position: center center;
                         height: 200px;
                         width: 200px;
