Fix bug with edit user without upload image

--- a/Frontend/src/containers/Homepage/Homepage.scss
+++ b/Frontend/src/containers/Homepage/Homepage.scss
@@ -179,6 +179,7 @@
                         background-repeat: no-repeat;
                         background-size: cover;
                         border-radius: 50%;
+                        border: 2px solid white;
                     }
                     &.handbook_1{
                         margin-left: 70px;
