--- a/Frontend/src/containers/System/Admin/UserRedux.scss
+++ b/Frontend/src/containers/System/Admin/UserRedux.scss
@@ -44,7 +44,7 @@
     margin: 5px;
     width: 100%;
     height: 70px;
-    border: 1px solid red;
+    border: 1px solid #ddd;
     background: center center no-repeat;
     background-size: contain;
     cursor: pointer
