View detail doctor

--- a/Frontend/src/containers/Homepage/Header.scss
+++ b/Frontend/src/containers/Homepage/Header.scss
@@ -22,6 +22,7 @@
                 background: url(../../assets/images/logo-bookingcare-2020.svg) center center no-repeat;
                 height: 80%;
                 width:  80%;
+                cursor: pointer;
             }
             i {
                 font-size: 25px;
