--- a/Frontend/src/containers/Homepage/Homepage.scss
+++ b/Frontend/src/containers/Homepage/Homepage.scss
@@ -63,11 +63,13 @@
                 .doctor-border{
                     height: 300px;
                     width: 300px;
+                    //border: 3px solid red;
                     border: 3px solid #cac3c3a6;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     border-radius: 10%;
+                    cursor: pointer;
                 }
                 .image-content{
                     width:300px;
